[project]
name = "fastapi-app"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "psycopg2-binary",
    "geoalchemy2>=0.18.1",
    "pydantic-settings>=2.12.0",
    "types-shapely>=2.1.0.20250917",
]

[tool.alembic]
script_location = "alembic"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "httpx==0.27.2",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "shapely>=2.1.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
exclude = '(.venv|venv)'

[tool.ruff]
exclude = [".venv", "venv", "__pycache__"]
